# MinecraftPROTO

./: .gitignore  Action.h
MinecraftPROTO/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Tutorials.sln  ZERO_CHECK.proj  ZERO_CHECK.proj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  launch-tutorial07_model_loading-Debug.cmd  launch-tutorial07_model_loading-MinSizeRel.cmd  launch-tutorial07_model_loading-Release.cmd  tutorial07_model_loading.vcxproj  tutorial07_model_loading.vcxproj.filters
MinecraftPROTO/tutorial07_model_loading.dir/Debug/: tutorial07_model_loading.exe.recipe  tutorial07_model_loading.ilk
MinecraftPROTO/tutorial07_model_loading.dir/Debug/tutorial.88D91C79.tlog/: CL.12180.write.1.tlog  CL.20144.write.1.tlog  CL.22848.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MinecraftPROTO/tutorial07_model_loading.dir/Debug/tutorial.A5A51ED5.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tutorial07_model_loading.lastbuildstate
MinecraftPROTO/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
ogl-master/: CMakeLists.txt
ogl-master/common/: controls.cpp  controls.hpp  texture.cpp
ogl-master/tutorial07_model_loading/: Shader_Fragment_Debug.fragmentshader  Shader_Vertex_Debug.vertexshader  tutorial07.cpp
ogl-master/tutorial07_model_loading/Scripts/: Action.h  Block.cpp  Block.h  Block_Datas.h  Block_Render.cpp  Block_Render.h  Block_Render_Type.h  Block_Shape_Data.cpp  Block_Shape_Data.h  Block_Shapes_Type.h  Block_Type.h  Blocks_Global_Datas.cpp  Blocks_Global_Datas.h  Blocks_Global_Shapes.cpp  Blocks_Global_Shapes.h  Chunk.cpp  Chunk.h  Chunk_Data.cpp  Chunk_Data.h  Chunk_Data_Generator.cpp  Chunk_Data_Generator.h  Chunk_Pool_Manager.cpp  Chunk_Pool_Manager.h  Chunk_Render.cpp  Chunk_Render.h  Chunk_Render_Generator.cpp  Chunk_Render_Generator.h  Chunk_SideData.cpp  Chunk_SideData.h  ChunksManager.cpp  ChunksManager.h  Chunks_Manager.cpp  Chunks_Manager.h  Debug_World.cpp  Debug_World.h  GlobalDefine.h  MainGame.cpp  MainGame.h  PerlinNoise.cpp  PerlinNoise.h  (+18 more)
ogl-master/tutorial07_model_loading/Scripts/GameRender/: Block_Render.cpp  Block_Render.h  Chunk.cpp  Chunk.h
ogl-master/tutorial07_model_loading/TexturesDDS/block/: acacia_log.dds  amethyst_block.dds  barrel_side.dds  deepslate_diamond_ore.dds  glass.dds  red_stained_glass.dds
